-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
5844
I just updated our Grove Test MDS to 2.3.57-1chaos and noticed the following error which I have not seen before. Is this something to be alarmed about?
2012-12-13 11:06:39 LustreError: 33478:0:(mdd_dir.c:2750:mdd_links_rename()) link_ea add 'simul_link.109' failed -75 [0x20001c38b:0xaa88:0x0] 2012-12-13 11:06:39 LustreError: 33348:0:(mdd_dir.c:2750:mdd_links_rename()) link_ea add 'simul_link.357' failed -75 [0x20001c38b:0xaa88:0x0] 2012-12-13 11:06:39 LustreError: 33226:0:(mdd_dir.c:2754:mdd_links_rename()) link_ea del 'simul_link.1' failed -2 [0x20001c38b:0xaa88:0x0] 2012-12-13 11:06:39 LustreError: 33226:0:(mdd_dir.c:2754:mdd_links_rename()) link_ea del 'simul_link.2' failed -2 [0x20001c38b:0xaa88:0x0]